# test

./: README.md  conftest.py  stepik.py  test_items.py
my-tests-with-selene/: pyproject.toml
my-tests-with-selene/my_tests_with_selene/: explicit_wait.py  test1.py
stepik_page_object/: conftest.py  requirements.txt
stepik_page_object/page/: base_page.py
stepik_page_object/test/: test_main_page.py
