[tool.poetry]
name = "my-tests-with-selene"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_tests_with_selene"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = {version = "2.0.0b17", allow-prereleases = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
